# crackvac

./: .gitignore  README.md  robot_model.urdf
CAD Files/: belt_pulleys_equations.txt  drive_stage1_driver_gear.SLDPRT  drive_stage1_gear.SLDPRT  drive_stage1_pinion.SLDPRT  drive_stage2_driven_gear.SLDPRT  drive_stage2_driver_gear.SLDPRT  drive_stage2_gear_v2.SLDPRT  sarah.txt  spur_gear_equations.txt
CAD Files/Assemblies/: steer_stage1_spur_gears.SLDASM  steer_stage2_belt_and_pulleys.SLDASM
CAD Files/Parts/: wheel.SLDPRT
CAD Files/Parts/Drive/: drive_stage1_driven_gear.SLDPRT  drive_stage1_driver_gear.SLDPRT
CAD Files/Parts/Steer/: steer_shaft.SLDPRT  steer_stage1_spur_gear_large.SLDPRT  steer_stage1_spur_gear_small.SLDPRT  steer_stage2_driven_pulley.SLDPRT  steer_stage2_driver_pulley.SLDPRT  steer_stage2_gear_shaft.SLDPRT  steer_stage2_pulley_shaft.SLDPRT
sim/: CMakeLists.txt  package.xml  swerve_drive_plugins.xml
sim/config/: controllers.yaml  gazebo_bridge.yaml
sim/configs/: controllers.yaml  display.rviz
sim/frame/: frames_2025-12-25_13.36.52.gv  frames_2025-12-27_02.46.30.gv
sim/include/sim/: constants.hpp  odometry.hpp  swerve_controller.hpp  swerve_module.hpp
sim/include/sim/geometry/: rotation2d.hpp  rotation_2d.hpp  translation2d.hpp  translation_2d.hpp
sim/include/sim/utils/: pid_controller.hpp
sim/launch/: description_launch.py  display_launch.py  gazebo.launch.py  gazebo_launch.py  rviz.launch.py  rviz_launch.py  script_launch.py
sim/src/: state_publisher.cpp  swerve_controller.cpp  swerve_module.cpp
sim/urdf/: drivetrain_control.xacro  robot_model.urdf  robot_model.urdf.xacro  robot_model.xacro.urdf
